# meshchat

./: .deepsource.toml  .gitignore  LICENSE.md  README.md  note.txt
client/: .gitignore  README.md  build.gradle
client-lib/: CMakeLists.txt  Makefile  README.md  main.c
client-lib/inc/: all.h  auth.h  color.h  common.h  connection.h  map_types.h  service.h  utils.h
client-lib/src/: auth.c  connection.c  map_types.c  service.c
client-lib/test/: CMakeLists.txt  auth_test.c  chat_test.c  conv_test.c  msg_test.c  notify_test.c  seed.c  test_common.h  user_test.c
client-lib/test/inc/: test_common.h
client/src/main/java/: module-info.java
client/src/main/java/com/meshchat/client/: Application.java  DIModule.java  JDBCTest.java  Launcher.java  ModelSingleton.java
client/src/main/java/com/meshchat/client/binding/: IDataSource.java  IStackNavigation.java  ITCPService.java
client/src/main/java/com/meshchat/client/cnative/: CAPIServiceLib.java
client/src/main/java/com/meshchat/client/cnative/req/: RequestAuth.java
client/src/main/java/com/meshchat/client/cnative/res/: ResponseAuth.java  ResponseMsg.java  ResponseUser.java
client/src/main/java/com/meshchat/client/controllers/: BaseController.java  ChatController.java  HelloController.java  MessageController.java
client/src/main/java/com/meshchat/client/db/: DBUtil.java
client/src/main/java/com/meshchat/client/db/entities/: ChatEntity.java  ConvEntity.java  IEntity.java  MemberEntity.java  MsgEntity.java  UserEntity.java
client/src/main/java/com/meshchat/client/exceptions/: APICallException.java  UnsupportedOpException.java
client/src/main/java/com/meshchat/client/experiments/: ComUnionJNR.java  CommonJNR.java  JNRTypeConverter.java
client/src/main/java/com/meshchat/client/experiments/JNA/: CommonT.java  JNATypeConverter.java  TypeMapping.java
client/src/main/java/com/meshchat/client/experiments/libs/: TypeMappingLib.java
client/src/main/java/com/meshchat/client/launchers/: AppNavigationPreview.java  HomeLauncher.java  HomeLayoutPreview.java  HomeScreenPreview.java  LoginPreview.java  PreviewLauncher.java  StackNavigationPreview.java  TabLayoutLaunch.java  TabNavigationPreview.java
client/src/main/java/com/meshchat/client/model/: BaseModel.java  BaseSchema.java  Chat.java  ChatGen.java  Conv.java  DataSource.java  DataStore.java  ISchema.java  Message.java  User.java  UserProfile.java
client/src/main/java/com/meshchat/client/net/: ApiResponseHandler.java  OpGroup.java  OpSubGroup.java  TCPClient.java
client/src/main/java/com/meshchat/client/net/client/: ChatRoomType.java  TCPBasedClient.java  TCPClient.java  TCPJavaClient.java  TCPNativeClient.java  TCPSimpleCClient.java
client/src/main/java/com/meshchat/client/net/commands/: ApiCommand.java
client/src/main/java/com/meshchat/client/net/controllers/: BaseNetController.java
client/src/main/java/com/meshchat/client/net/messages/: BaseBody.java  BaseHeader.java  BaseInfo.java  BaseParser.java  MsgHeader.java
client/src/main/java/com/meshchat/client/net/multipart/: IMultiPartBufferReceiver.java  SimpleStringMultiPartBufferReceiver.java
client/src/main/java/com/meshchat/client/net/providers/: ApiAuthProvider.java  ApiProvider.java  (+3 more)
client/src/main/java/com/meshchat/client/observablebinding/: ChatToChatItemChatBinding.java  ConvToChatItemConvBinding.java  CustomUIBinding.java  ScreenHandlerToNodeBinding.java
client/src/main/java/com/meshchat/client/pipe/: Pipe.java  file.java
client/src/main/java/com/meshchat/client/utils/: ApplicationLogger.java  BaseLogger.java  Config.java  CustomUIBinding.java
client/src/main/java/com/meshchat/client/viewmodels/: BaseViewModel.java  ChatViewModel.java  ConvInfoViewModel.java  ConvViewModel.java  CreateConvViewModel.java  DialogViewModel.java  LoginViewModel.java  MessageViewModel.java  PaginateViewModel.java  SearchUserViewModel.java  SignUpViewModel.java  UserProfileViewModel.java
client/src/main/java/com/meshchat/client/views/: HomeScreenHandler.java
client/src/main/java/com/netchat/client/: HelloApplication.java  HelloController.java
client/src/main/resources/com/meshchat/client/: hello-view.fxml
client/src/main/resources/com/meshchat/client/styles/: scroll-bar.css  style.css
client/src/main/resources/com/meshchat/client/views/: create-group-form-screen.fxml  home-screen.fxml  popup-menu.fxml  signin.fxml  signup.fxml  splash-screen.fxml  user-profile.fxml
client/src/main/resources/com/netchat/client/: hello-view.fxml
client/src/test/java/com/meshchat/client/: HelloApplicationTest.java  Seed.java
client/src/test/java/com/meshchat/client/cnative/: CAPIServiceLibTest.java
client/src/test/java/com/meshchat/client/experiments/: JNATypeConverterTest.java  JNRCSocketTest.java  JNRNumberConverterTest.java  JNRTypeConverterTest.java  JNRUnionStructNestedUnionTest.java
client/src/test/java/com/meshchat/client/net/: TCPClientTest.java
client/src/test/java/com/meshchat/client/viewmodels/: AuthViewModelTest.java  ChatViewModelTest.java  SeedTest.java  SignUpViewModelTest.java
server/: .gitignore  CMakeLists.txt  Makefile  README.md  seed
server/db/: schema.down.sql  schema.up.sql
server/inc/: handler.h  request.h  response.h  sql.h
server/inc/socklib/: common.h  tcp.h  udp.h
server/inc/utils/: random.h  sll.h  string.h
server/lib/: CMakeLists.txt
server/lib/libfdr/: CMakeLists.txt
server/lib/sqlite3/: CMakeLists.txt
server/lib/thpool/: CMakeLists.txt
server/src/: CMakeLists.txt  handler.c  main.c  request.c  response.c  seed.c  sql.c
server/src/socklib/: CMakeLists.txt  common.c  tcp.c  udp.c
server/src/sql/: users.c
server/src/utils/: CMakeLists.txt  random.c  sll.c  string.c
server/test/: CMakeLists.txt  request_test.c  response_test.c  sll_test.c  socklib_test.c  sql_test.c  sqlite3_test.c  string_test.c  test_common.h
type-mapping/: CMakeLists.txt  arr.c  arr.h  client.c  client.h  color.h  debug.h  int.c  int.h  main.c  struct.c  struct.h  tcp-glob.c  tcp.h  union.c  union.h
type-mapping/b/: CMakeCache.txt  Makefile  cmake_install.cmake  main
(+101 files in other folders)
